# fastapi-starter

./: .dockerignore  .env.example  Dockerfile  README.MD  alembic.ini  create_module.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
app/: main.py
app/Auth/: AuthService.py  auth_utils.py  security.py
app/Jwt/: JwtSchema.py  JwtService.py
app/User/: UserModel.py  UserRepository.py  UserRoutes.py  UserSchema.py  UserService.py
app/example/: ExampleModel.py  ExampleRepository.py  ExampleRoutes.py  ExampleSchema.py  ExampleService.py
app/shared/config/: Database.py  env_variables.py
app/shared/errors/: CustomError.py
app/shared/models/: BaseModel.py
app/shared/schemas/: GenericSchema.py
migrations/: env.py  script.py.mako
migrations/versions/: fd7508c61df6_initial_migration.py
test/: conftest.py
test/user/integration/: test_login.py  test_me.py  test_signup.py
test/utils/: cleanup.py  db_seeding.py
